black render of mirrored object - cycles #70561

Closed
opened 2019-10-05 16:46:15 +02:00 by Artur · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
when using the mirror the mirrored object come as black. Ive checked for overlaping and copied faces, recalculated normals. I had bevel but I removed it and it still comes as black. Eevee seames to work

Exact steps for others to reproduce the error
The element come from sketchup exported to obj and imported to blender. I baisically recreated the geometry in edit mode using just a section from the importet geometry and extruded it and finally mirrored. bug.blend

black mirror.png
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** when using the mirror the mirrored object come as black. Ive checked for overlaping and copied faces, recalculated normals. I had bevel but I removed it and it still comes as black. Eevee seames to work **Exact steps for others to reproduce the error** The element come from sketchup exported to obj and imported to blender. I baisically recreated the geometry in edit mode using just a section from the importet geometry and extruded it and finally mirrored. [bug.blend](https://archive.blender.org/developer/F7791097/bug.blend) ![black mirror.png](https://archive.blender.org/developer/F7791099/black_mirror.png) [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @arturmachura

Added subscriber: @arturmachura

Added subscriber: @Russ1642

Added subscriber: @Russ1642

Added subscriber: @dark999

Added subscriber: @dark999

can confirm this problem on linux Blender 2.80 f6cb5f5449 (Stable), OpenSUSE Tumbleweed/KDE, AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.21, Factory Setting applied, LoadUI and Trusted Source disabled in file browser, same problem in Blender 2.81 ab519b91b2

this problem is visible in Solid, Material Preview (Lock Dev) and Rendered viewport, if i apply subdivision to object, problem disappear ans it is show as original mirrored object instead to be black

can confirm this problem on linux Blender 2.80 f6cb5f54494e (Stable), OpenSUSE Tumbleweed/KDE, AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.21, Factory Setting applied, LoadUI and Trusted Source disabled in file browser, same problem in Blender 2.81 ab519b91b2c4 this problem is visible in Solid, Material Preview (Lock Dev) and Rendered viewport, if i apply subdivision to object, problem disappear ans it is show as original mirrored object instead to be black

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Germano Cavalcante self-assigned this 2019-10-08 16:34:38 +02:00

It is not a bug. This geometry has Custom Normals.
Delete the Custom Normals if you want the original normals.

It is not a bug. This geometry has `Custom Normals`. Delete the `Custom Normals` if you want the original normals.
Germano Cavalcante removed their assignment 2019-10-08 16:43:40 +02:00
Bastien Montagne was assigned by Germano Cavalcante 2019-10-08 16:43:40 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

On second thought, Custom Split Normals should be mirrored as well.
This is how it worked in blender 2.79

@mont29, this seems to involve more modifiers than viewport.
Do you know what may be happening?

On second thought, Custom Split Normals should be mirrored as well. This is how it worked in blender 2.79 @mont29, this seems to involve more modifiers than viewport. Do you know what may be happening?

This issue was referenced by 47b95a2957

This issue was referenced by 47b95a295706c3092e48a227b50360748f8789be

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

there is code in that modifier to handle custom normals, just not using the proper transform for normals… Fix incoming.

there is code in that modifier to handle custom normals, just not using the proper transform for normals… Fix incoming.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you @mano-wii and @mont29

Thank you @mano-wii and @mont29
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70561
No description provided.