Fix T70561: bad custom normals in mirrored geometry.

Original code from rB1a9e698099b5 used a rather naive approach, now use
proper transpose of inverse of geometry transform for the normals.